--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -15,95 +15,87 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
 - current_page.data.share_image = image_share_platform
 - current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
 
-
-
-.container-color--white-to-gray-light
-  section#products.section-article data-interchange="[/public/img/art/hexagon-bg-simple.svg, small]"
-    .row.align-center
-      .columns.small-12.text-center
-        h2.headline-3.group Your playbook for digital health success
-    .row.align-center.align-middle aria-label="Datica Product List" role="region" tabindex="-1"
-      .columns.small-12.medium-6.large-5
-        ul.menu.vertical.content-matrix role="tablist"
-          - data.views.product_list.products.each_with_index do | product, index |
-            li role="presentation"
-              - activeClass = "t#{index} trigger-current"
-              - baseClass = "t#{index}"
-              a.content-trigger role="button" class=(index == 0 ? activeClass : baseClass) aria-selected=(index == 0 ? "true" : "false") id=baseClass href=product.url title=product.cta data-track="true" data-track-category="home" data-track-id="product-group-#{(product.abbr).downcase}"
-                .text-bold.spaced-out = product.abbr
-                h4.headline-5 = product.title
-                .hide-for-medium
-                  = Kramdown::Document.new(product.lead).to_html
-      .columns.small-12.medium-6.large-4.show-for-medium
-        - data.views.product_list.products.each_with_index do | product, index |
-          .content-item role="tabpanel" aria-labelledby="t#{index}" id="c#{index}" class=(index == 0 ? "current" : "hide") aria-expanded=(index == 0 ? "true" : "false")
-            .lead = Kramdown::Document.new(product.lead).to_html
-            ul.list-check
-              - product.features.each do | feature |
-                li = feature
-
+section#top.section-article.bg-gray-12.container-image-fill.lozad data-background-image=bg_product_light
+  .row.align-center
+    .columns.small-12.medium-12.large-8.text-center
+      h1 Datica brings healthcare to the cloud. 
+      p.lead Get through the maze of compliance and onto the cloud faster with Datica.
+      ul.menu.align-center
+        li
+          a.headline-4.spaced-out href="/compliance/" Compliance
+        li
+          a.headline-4.spaced-out href="/integrations/" Integration
+        li
+          a.headline-4.spaced-out href="/about/" About Datica
+  .row.align-center
+    .columns.shrink
+      = partial "partials/snippets/button", :locals => { :label => "Ask a Datica Expert", :url => "/compliance/", :icon_align => "right", :button_classes => "button hollow", :icon => "icon-chat" }
+    .columns.shrink
+      = partial "partials/snippets/button", :locals => { :label => "Get a demo", :url => "/integration/", :button_classes => "button primary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cmi" }
 .strip-bright
-section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
+section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_product_dark
   .row.align-center
     .columns.small-12.medium-12.large-8.text-center
       h2.headline-1.text-bold What's your biggest challenge?
   .row.align-center
     .columns.shrink
-      = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST audit", :url => "/compliance/", :icon_align => "left", :button_classes => "button", :icon => "icon-chevron-left" }
+      = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST audit", :url => "/compliance/", :icon_align => "left", :button_classes => "button success", :icon => "icon-chevron-left" }
     .columns.shrink
-      = partial "partials/snippets/button", :locals => { :label => "I need to integrate with a hospital", :url => "/integration/", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cmi" }
+      = partial "partials/snippets/button", :locals => { :label => "I need to integrate with a hospital", :url => "/integration/", :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cmi" }
   .row.align-center
-    .columns.small-12.large-6
+    .columns.small-12.large-6.text-center
       p.lead <strong>You have complex problems.</strong> Datica has a family of powerful solutions. Powerful when used on their own but meant to work together, our products and solutions address your most pressing challenges.
-  .row.align-center.small-up-1.medium-large-up-2.large-up-3.row--card-grid
-    .column.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("ccms-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CCMS
-          h3.headline-4 Cloud Compliance Management System 
-          p.strip.strip-small.strip-ccms
-          p.lead Know the precise compliance state of your cloud environments
-          p Datica Cloud Compliance Management System is the first-ever tool to guarantee compliance assurance of managed cloud-native services. Our dashboard and reports enable you to continuously monitor compliance, react quickly to risks and incidents, and attest to compliance for audits.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button button--light button-inline", :item_id => "product-group-ccms", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-ccms.z-auto data-glow="false"
-    .column.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cmi-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CMI
-          h3.headline-4 Compliant Managed Integration
-          p.strip.strip-small.strip-cmi
-          p.lead Scalable, secure data exchange with any EHR
-          p We combine cutting-edge automation of cloud infrastructure security, devOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CMI", :url => "/compliant-managed-integration/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-chevron-right", :icon_align => "right" }
-      .blob-color.blob-cmi.z-auto data-glow="false"
-    .column.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cks-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CKS
-          h3.headline-4 Compliant Kubernetes Service
-          p.strip.strip-small.strip-cks
-          p.lead Get enterprise scalability for your complex digital health application on a compliant Kubernetes cluster
-          p Datica Compliant Kubernetes Service gives you the orchestration and scalable power of Kubernetes with compliance built in.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-cks.z-auto data-glow="false"
-    .column.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CPaaS
-          h3.headline-4 Compliant Platform <br />as a Service
-          p.strip.strip-small.strip-cpaas
-          p.lead Build and deploy a digital health application on a compliant hosted platform
-          p Datica Compliant Platform as a Service gives startups pre-packaged compliance and security. CPaaS makes hosting your compliant healthcare applications as simple as git push.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-cpaas.z-auto data-glow="false"
+  .row.align-center
+    .columns.small-12.large-10
+      .row.align-center.small-up-1.medium-large-up-2.row--card-grid.text-center
+        .column.relative.has-blob
+          .card.container-color--trans.relative.z-5
+            .card-section
+              = inline_svg("ccms-logo-w", class: "icon-size--xlarge")
+              .subhead--spaced CCMS
+              h3.headline-4 Cloud Compliance Management System 
+              p.strip.strip-small.strip-ccms
+              p.lead Know the precise compliance state of your cloud environments
+              p Datica Cloud Compliance Management System is the first-ever tool to guarantee compliance assurance of managed cloud-native services. Our dashboard and reports enable you to continuously monitor compliance, react quickly to risks and incidents, and attest to compliance for audits.
+            .card-divider.card-divider--flush
+              = partial "partials/snippets/button", :locals => { :label => "Learn more about CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button button--light button-inline", :item_id => "product-group-ccms", :icon => "icon-angle-right", :icon_align => "right" }
+          .blob-color.blob-ccms.z-auto data-glow="false"
+        .column.relative.has-blob
+          .card.container-color--trans.relative.z-5
+            .card-section
+              = inline_svg("cmi-logo-w", class: "icon-size--xlarge")
+              .subhead--spaced CMI
+              h3.headline-4 Compliant Managed Integration
+              p.strip.strip-small.strip-cmi
+              p.lead Scalable, secure data exchange with any EHR
+              p We combine cutting-edge automation of cloud infrastructure security, devOps processes, and interface engines, with our extensive experience in solving healthcare integration problems. All built on a solid foundation of <strong>continuous HIPAA compliance</strong>.
+            .card-divider.card-divider--flush
+              = partial "partials/snippets/button", :locals => { :label => "Learn more about CMI", :url => "/compliant-managed-integration/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-chevron-right", :icon_align => "right" }
+          .blob-color.blob-cmi.z-auto data-glow="false"
+        .column.relative.has-blob
+          .card.container-color--trans.relative.z-5
+            .card-section
+              = inline_svg("cks-logo-w", class: "icon-size--xlarge")
+              .subhead--spaced CKS
+              h3.headline-4 Compliant Kubernetes Service
+              p.strip.strip-small.strip-cks
+              p.lead Get enterprise scalability for your complex digital health application on a compliant Kubernetes cluster
+              p Datica Compliant Kubernetes Service gives you the orchestration and scalable power of Kubernetes with compliance built in.
+            .card-divider.card-divider--flush
+              = partial "partials/snippets/button", :locals => { :label => "Learn more about CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-angle-right", :icon_align => "right" }
+          .blob-color.blob-cks.z-auto data-glow="false"
+        .column.relative.has-blob
+          .card.container-color--trans.relative.z-5
+            .card-section
+              = inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
+              .subhead--spaced CPaaS
+              h3.headline-4 Compliant Platform <br />as a Service
+              p.strip.strip-small.strip-cpaas
+              p.lead Build and deploy a digital health application on a compliant hosted platform
+              p Datica Compliant Platform as a Service gives startups pre-packaged compliance and security. CPaaS makes hosting your compliant healthcare applications as simple as git push.
+            .card-divider.card-divider--flush
+              = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
+          .blob-color.blob-cpaas.z-auto data-glow="false"
 
 .strip.strip-cmi
 section.section-article
@@ -131,9 +123,11 @@ section.section-article
 
 
 section.container-gray-10.section-article
-  h2.headline-2 Grow with us
-  p 
-  .row.small-up-2.medium-up-3
+  .row.align-center
+    .columns.small-12.large-6
+      h2.headline-3.text-center <strong>Grow</strong> with us
+      p.text-center We exist to help healthcare developers succeed and have many open resources to share our expertise with you.
+  .row.small-up-2.medium-up-3.group
     .column
       h4.headline-4 Blog
       p News and insights from the Datica Experts behind Healthcare's trusted cloud.
