--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -61,43 +61,54 @@ scss:
     margin: 0.5rem 0;
   }
 
-.bg-gray-2.container-image-fill.lozad data-background-image=bg_product_dark
+.bg-gray-12.container-image-fill.lozad data-background-image=bg_product_light
   section.section-article#top
     .row.align-center
       .columns.small-12.large-8.text-center
-        h1.headline-5.subheader--spaced-out.text--yellow-glow About Datica
+        h1.headline-5.spaced-out About Datica
         h4.headline-2 We bring healthcare to the cloud.
     .row.align-center.group
       .columns.small-12.medium-8.large-8.text-center.group
-        p.lead Datica was formed in 2013 to help healthcare technology companies move to the cloud. We help our customers <a class="link--yellow" href="/cloud-compliance" title="">achieve HIPAA compliance</a>, <a class="link--yellow" href="/ehr-integration" title="">integrate securely</a> with hospitals and EHRs, and focus on what they're best at — without worrying about compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment.
+        p.lead Datica was formed in 2013 to help healthcare technology companies move to the cloud. We help our customers <a class="" href="/cloud-compliance" title="Read more about cloud compliance">achieve HIPAA compliance</a>, <a class="" href="/ehr-integration" title="Learn about EHR integration">integrate securely</a> with hospitals and EHRs, and focus on what they're best at — without worrying about compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment.
     .row.align-center
       .columns.small-12.large-10
         .collection
-          .row.group--2x
-            .columns.small-12.medium-8
-              h2.headline-5.spaced-out Why We Exist
+          .row.group--2x.align-center.align-middle
+            .columns.small-7.medium-8
+              h2.headline-5.spaced-out.text-light Why We Exist
               h3.headline-4 Empowering Digital Health Success
               p The complexity of compliance on the cloud is holding back the adoption of cloud native technology in the healthcare space. By removing compliance as a concern, we help our customers focus on what they do best.
-          .row.group--2x
-            .columns.small-12.medium-8
-              h2.headline-5.spaced-out What We Are
+            .columns.small-5.medium-3
+              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/7Cbcr7jzlDNIOpuGiehpwI/1088af53aed696ee3da57e9d3ff9a51e/3x_growth.png"
+
+          .row.group--2x.align-center.align-middle
+            .columns.small-7.medium-8
+              h2.headline-5.spaced-out.text-light What We Are
               h3.headline-4 The Most Secure and Compliant Infrastructure Possible
               p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by helping you address your attestation responsibilities with a suite of products built to fit your specific use case on the cloud.
-          .row.group--2x
-            .columns.small-12.medium-8
-              h2.headline-5.spaced-out How We Do It
+            .columns.small-5.medium-3
+              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/0tDICrmYSfsnYSzn1gzgR/f1beb7b7b789030a72cd0396239f5945/us_eu.png"
+          .row.group--2x.align-center.align-middle
+            .columns.small-7.medium-8
+              h2.headline-5.spaced-out.text-light How We Do It
               h3.headline-4 Best Practices are Best Practices
-              img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/1LiwzEEIDaomk00AAA8wkE/2303873d45b65774d37f01f329365850/hitrust-logo-w.svg" /
+              img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/016f2d364265c04e12c7db4eae95f94c/hitrust-logo.svg" /
               p By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.
-          .row.group--2x
-            .columns.small-12.medium-8
-              h2.headline-5.spaced-out How We Create Value
+            .columns.small-5.medium-3
+              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/3T2aDxazGShZJVKW0xSKtD/bfc6aa50e70bf27f3815bcb22c828470/17_events.png"
+
+          .row.group--2x.align-center.align-middle
+            .columns.small-7.medium-8
+              h2.headline-5.spaced-out.text-light How We Create Value
               h3.headline-4 Compliance Breeds Innovation
-              img.logo-size--large.float-right.lozad.invert " alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
+              img.logo-size--large.float-right.lozad alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
               p When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.
-          .row.group--2x
-            .columns.small-12.medium-8
-              h2.headline-5.spaced-out What We Believe
+            .columns.small-5.medium-3
+              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/6qs1qJbcBXtYj8xt2fjFnk/b948c2e6ccf1614cf5df86fd306f66c3/partners.png"
+
+          .row.group--2x.align-center.align-middle
+            .columns.small-7.medium-8
+              h2.headline-5.spaced-out.text-light What We Believe
               h3.headline-4 Trust Is Earned
               ul
                 li Compliance moves at the speed of trust.
@@ -105,57 +116,61 @@ scss:
                 li Healthcare application development shouldn't be harder than other industry just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. Compliance shouldn't block progress.
                 li
                   | Give back to the developer community whenever possible. Use open source tools whenever possible. Learn more about our
-                  a.link-arrow.link-arrow--yellow href="/open-source"  open source contributions.
+                  a.link-arrow href="/open-source"  open source contributions.
                 li We know we can't make the cloud better alone. Industry collaboration is important. Work together for the greater good.
-section.section-article.bg-gray-12
-  .row.align-center.group--sm
-    .columns
+            .columns.small-5.medium-3
+              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/Wya4eSOBXCvaLlatIZN4y/231f374a3323172870f7bcf6b32e5cc1/100m_records.png"
 
-  - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
-  - execs.each do | id, collection |
+.strip.strip-bright
+.bg-gray-12
+  section.section-article.bg-white.drop
+    - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
+    - execs.each do | id, collection |
+      .row.align-center
+        .columns.small-12.medium-8.large-6.text-center.group
+          h2.headline-4.spaced-out = (collection.has_key?("subhead") ? collection.subhead : "Datica Leadership") 
+          /p.lead = (collection.has_key?("desc") ? collection.desc : nil)
+      .row.align-center.small-up-2.medium-up-3.large-up-5
+        - collection["related_entries"].each do | person |
+          .column
+            = partial("partials/snippets/person-vertical-simple", :locals => { :p => person, :classes => "group", :use_headers => true })
+            /.person-simple
+              a href="/about/#{person.slug}" title="Learn more about #{person.fullname}"
+                img.lozad.avatar.avatar--large-mid.circle src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="#{person.profile_pic.url}?f=face&fit=thumb&fm=jpg&fl=progressive&w=250&h=250&fm=jpg&q=60" alt=person.fullname
+      .row.group--2x
+        .column
+          .button-group.align-center
+            = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button secondary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
+
     .row.align-center
-      .columns.small-12.medium-8.large-6.text-center.group
-        h2.headline-3 = (collection.has_key?("subhead") ? collection.subhead : "Datica Leadership") 
-        /p.lead = (collection.has_key?("desc") ? collection.desc : nil)
-    .row.align-center.small-up-2.medium-up-3.large-up-5
-      - collection["related_entries"].each do | person |
-        .column
-          = partial("partials/snippets/person-vertical-simple", :locals => { :p => person, :classes => "group", :use_headers => true })
-          /.person-simple
-            a href="/about/#{person.slug}" title="Learn more about #{person.fullname}"
-              img.lozad.avatar.avatar--large-mid.circle src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="#{person.profile_pic.url}?f=face&fit=thumb&fm=jpg&fl=progressive&w=250&h=250&fm=jpg&q=60" alt=person.fullname
-    .button-group.align-center
-      = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
+      .columns.small-12.medium-8.text-center
+        h2.headline-4.spaced-out.group A Strong Backing
+        .row.small-up-2.medium-up-4.align-middle
+          .column
+            img.logo-size--large.img-crisp.lozad alt=("Arthur Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=120" /
+          .column
+            img.logo-size--large.img-crisp.lozad alt=("Baird Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=120" /
+          .column
+            img.logo-size--large.img-crisp.lozad alt=("Chicago Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=120" /
+          .column
+            img.logo-size--large.img-crisp.lozad alt=("Lewis and Clark Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=120" /
 
-section.section-article.bg-white
-  .row.align-center
-    .columns.small-12.medium-10.large-7
-      h5.spaced-out.text-center Milestones
-      #timeline.timeline--vertical
-        #line.line
-        - current_page.data.timeline_company.each do | item |
-          .block
-            .date
-              span
-                = Kramdown::Document.new(item.date).to_html
-            span.dot
-            .content
-              = Kramdown::Document.new(item.body).to_html
+  section.section-article
+    .row.align-center
+      .columns.small-12.medium-10.large-7
+        h5.spaced-out.text-center Milestones
+        #timeline.timeline--vertical
+          #line.line
+          - current_page.data.timeline_company.each do | item |
+            .block
+              .date
+                span
+                  = Kramdown::Document.new(item.date).to_html
+              span.dot
+              .content
+                = Kramdown::Document.new(item.body).to_html
 
-section.section-article
-  .row.align-center
-    .columns.small-12.medium-8.text-center
-      h2.headline-3 A Strong Backing
-      .row.small-up-2.medium-up-4.align-middle
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Arthur Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=120" /
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Baird Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=120" /
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Chicago Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=120" /
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Lewis and Clark Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=120" /
-section.section-article.container-gray-11
+section.section-article.bg-gray-11
   .row.align-center
     .columns.small-12.medium-10.large-6
       = partial "partials/section-promos/careers", :locals => { :tagline => "We're building a team to transform healthcare. Join us!" }
